--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "browser-sync": "^2.13.0",
+    "browserify": "^16.1.1",
     "electron": "^1.7.5",
     "electron-packager": "^8.7.2",
     "gulp": "^3.9.1",
@@ -27,7 +28,8 @@
     "gulp-less": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
-    "gulp-uncss": "^1.0.6"
+    "gulp-uncss": "^1.0.6",
+    "watchify": "^3.11.0"
   },
   "repository": {
     "type": "git",
@@ -41,6 +43,8 @@
     "jspdf-autotable": "^2.3.2"
   },
   "scripts": {
+    "bundle": "browserify panel.js -o bundle.js",
+    "watch": "watchify panel.js -o bundle.js",
     "gulp": "gulp es6 && gulp pluginsjs",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . PedidosXico --overwrite --asar=true --platform=win32 --arch=x64 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Pedidos Xico\"",
