Se va a cambiar la manera de mostrar pedidos, se volverá a usar firebase directo y no localStorage

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "electron-winstaller": "^2.6.3",
     "jquery": "^3.2.1",
     "jspdf": "^1.3.3",
-    "jspdf-autotable": "^2.3.2"
+    "jspdf-autotable": "^2.3.2",
+    "vue-morris": "0.0.13"
   },
   "scripts": {
     "bundle": "browserify panel.js -o bundle.js",
@@ -49,6 +50,7 @@
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . PedidosXico --overwrite --asar=true --platform=win32 --arch=x64 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Pedidos Xico\"",
     "build": "npm run package-mac && npm run package-win",
-    "compile": "npm run gulp && npm run package-win"
+    "compile": "npm run gulp && npm run package-win",
+    "start": "electron ."
   }
 }
